--- a/package.json
+++ b/package.json
@@ -4,15 +4,21 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && prisma generate",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.7.1",
+    "@react-email/components": "^0.0.12",
+    "axios": "^1.6.2",
     "next": "14.0.4",
     "next-videos": "^1.4.1",
+    "prisma": "^5.7.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-email": "^1.10.0",
+    "resend": "^2.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
